# podio

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  env.sh  index.html
.github/scripts/: clang-format-hook
.github/workflows/: docs.yml  edm4hep.yaml  key4hep.yml  mac.yml  test.yml  ubuntu.yml
cmake/: podioBuild.cmake  podioMacros.cmake
doc/: advanced_topics.md  conf.py  frame.md  index.rst  userdata.md  versions.txt
doc/_templates/: versions.html
doc/aux/: main_index_redirect.html
doc/scripts/: update_versions.py
docs-on-gh-pages/: .buildinfo  ReleaseNotes.html  advanced_topics.html  contributing.html  datamodel_syntax.html  design.html  doc.html  doc_title.html  examples.html  frame.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  templates.html  userdata.html
docs-on-gh-pages/.doctrees/: ReleaseNotes.doctree  advanced_topics.doctree  contributing.doctree  datamodel_syntax.doctree  design.doctree  doc.doctree  doc_title.doctree  examples.doctree  frame.doctree  index.doctree  templates.doctree  userdata.doctree
docs-on-gh-pages/cpp_api/: api.html  classlist.html  filelist.html  namespacelist.html  structlist.html
docs-on-gh-pages/py_api/: modules.html  podio.html  podio_class_generator.html  podio_gen.html  podio_schema_evolution.html
include/podio/: BenchmarkUtil.h  CollectionBase.h  CollectionBranches.h  CollectionBufferRegistry.h  CollectionBuffers.h  CollisionPolicies.h  EDMDefinitionRegistry.h  Frame.h  GenericParameters.h  ObjBase.h  ROOTFrameReader.h  ROOTFrameWriter.h  ROOTLegacyReader.h  ROOTRawData.h  ROOTReader.h  ROOTReader_new.h  SIOBlock.h  SIOBlockUserData.h  SIOFrameWriter.h  SIOReader.h  SIOWriter.h  TimedReader.h  TimedWriter.h  UnpackingPolicies.h  UserDataCollection.h
master/: .buildinfo  ReleaseNotes.html  advanced_topics.html  contributing.html  datamodel_syntax.html  design.html  doc.html  doc_title.html  examples.html  frame.html  genindex.html  index.html  search.html  templates.html  userdata.html
master/.doctrees/: ReleaseNotes.doctree  advanced_topics.doctree  contributing.doctree  datamodel_syntax.doctree  design.doctree  doc.doctree  doc_title.doctree  environment.pickle  examples.doctree  frame.doctree  index.doctree  templates.doctree  (+1 more)
python/: generator_utils.py  podio_class_generator.py  test_EventStoreSio.py  test_MemberParser.py
src/: CMakeLists.txt  CollectionBufferRegistry.cc  EDMDefinitionRegistry.cc  GenericParameters.cc  ROOTFrameReader.cc  ROOTFrameWriter.cc  ROOTLegacyReader.cc  ROOTReader.cc  ROOTReader_new.cc  ROOTWriter.cc  SIOBlock.cc  SIOFrameReader.cc  SIOFrameWriter.cc  SIOReader.cc  SIOWriter.cc  SchemaEvolution.cc  UserDataCollection.cc  rootUtils.h  selection.xml  sioUtils.h
tests/: CMakeLists.txt  CTestCustom.cmake  datalayout.yaml  event.cpp  read.cpp  read_and_write.cpp  read_and_write_sio.cpp  read_frame.h  read_sio.cpp  read_test.h  unittest.cpp  write_frame.h  write_test.h
tests/unittests/: CMakeLists.txt  associations.cpp  interface_types.cpp  unittest.cpp
tools/: CMakeLists.txt  podio-dump
v00-00-00/: .buildinfo  ReleaseNotes.html  advanced_topics.html  contributing.html  datamodel_syntax.html  design.html  doc.html  doc_title.html  examples.html  frame.html  genindex.html  index.html  search.html  templates.html  userdata.html
v00-99/: .buildinfo  ReleaseNotes.html  advanced_topics.html  contributing.html  datamodel_syntax.html  design.html  doc.html  doc_title.html  examples.html  frame.html  genindex.html  index.html  objects.inv  search.html  templates.html  userdata.html
v99-99-99/: .buildinfo  ReleaseNotes.html  advanced_topics.html  contributing.html  datamodel_syntax.html  design.html  doc.html  doc_title.html  examples.html  frame.html  genindex.html  index.html  search.html  searchindex.js  templates.html  userdata.html
(+277 files in other folders)
